--- a/reader/index.html
+++ b/reader/index.html
@@ -22,10 +22,10 @@
     </header>
     <main>
         <section class="books-table container">
-            <div class="table-controller-wrapper flex-center">
-                <div class="table-controller-btn btn" data-status="0">Буду читать</div>
-                <div class="table-controller-btn btn" data-status="1">Читаю</div>
-                <div class="table-controller-btn btn" data-status="2">Прочитано</div>
+            <div class="table-controller-wrapper">
+                <div class="table-controller-btn btn" data-status=1>Буду читать</div>
+                <div class="table-controller-btn btn" data-status=2>Читаю</div>
+                <div class="table-controller-btn btn" data-status=3>Прочитано</div>
             </div>
             <table>
                 <thead>
